fix display menu on small devices

--- a/app/styles/_menu.scss
+++ b/app/styles/_menu.scss
@@ -32,7 +32,7 @@
     flex-basis: 50%;
     height: calc(50vh - #{$headers-sum / 2});
     position: relative;
-    font-size: 3em;
+    font-size: 2em;
     text-align: center;
 
     &.active::before {
